fix reset password endpoint
